binary search issue fixing, cant see images on ios mobile

--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -11,17 +11,18 @@ margin-spc is margin for each picture, should be about (10vw/pic-cols/2)
 #Gallery{
     width: 90vw;
     height: 84vh;
-    margin-bottom: 20vw;
-    margin-bottom: calc(80vw/var(--pic-cols)*2);
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     align-content: flex-start;
+    /*
     overflow-y: scroll;
     scroll-behavior: smooth;
+    margin-bottom: 20vw;
+    margin-bottom: calc(80vw/var(--pic-cols)*2);
     margin-top: 1vw;
-    margin-top: var(--margin-spc);
+    margin-top: var(--margin-spc);*/
 }
 
 #Gallery::-webkit-scrollbar{
